[package]
name = "erc4626-rs"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "solidoracle.com"
repository = "https://github.com/solidoracle/erc4626-rs"
keywords = ["vault", "defi", "arbitrum", "ethereum", "stylus", "alloy"]
description = "ERC4626 implementation in rust Stylus Arbitrum"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.1"
hex = "0.4.3"
wee_alloc = "0.4.5"
rustlearn = "0.5.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false